--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,29 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <link rel="icon" href="../media/img/logo.png">
     <script src="https://kit.fontawesome.com/266ba5adca.js" crossorigin="anonymous"></script>
     <title>Contact</title>
 </head>
 <body>
-    <header class="contact">
-        <img src="../media/img/logo.png" id="fg" alt="logo FG" width="10%">
-        <div class="nav bar">
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="./projects.html">My Porfolio</a></li>
-                <li><a href="./aboutme.html">About me</a></li>
-                <li><a href="./skills.html">Skills</a></li>
-            </ul>
-        </div>
+    <!--=========== HEADER ===========-->
+    <header class="header" id="header">
+        <nav class="nav_container">
+            <a href="../index.html" class="nav_logo">
+                <i class="fa-solid fa-code"></i>
+                Fran
+            </a>    
+
+            <div class="nav_menu" id="nav-menu"> 
+                <a href="../index.html" class="nav_link">Home</a>
+                <a href="./projects.html" class="nav_link">My Portfolio</a>
+                <a href="./skills.html" class="nav_link">Skills</a>
+                <a href="./contact.html" class="nav_link">Contact</a>
+            
+
+                <div class="nav_close" id="nav-close">
+                    <i class="fa-solid fa-xmark"></i>
+                </div>
+            </div>
+
+            <div class="nav_toggle" id="nav-toggle">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+        </nav>
     </header>
-    <main>
+    <main class="main_form">
         <section class="form">
             <h2>Contact Me</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             <fieldset>
                 <legend>Contact me</legend>
-                <form action="">
+                <form action="" class="field_form">
                     <div>
                         <label for="name">Name</label>
                         <input type="text" name="name">
@@ -39,30 +54,44 @@
                         <label for="message">Message</label><br>
                         <textarea name="message" id="" cols="40" rows="10" required></textarea>
                     </div>
-                    <input type="reset" value="Clean">
-                    <input type="submit" value="Send me message!">
+                    <div class="btn_container">
+                        <input type="reset" value="Clean" class="btns">
+                        <input type="submit" value="Send me message!" class="btns">
+                    </div>
                 </form>
             </fieldset>               
         </section>
+        <section>
+            <div class="help_container">
+                <h3>Made with <i class="fa-solid fa-heart"></i> with the help of CoderHouse</h3>
+                <a href="http://www.coderhouse.com"><img src="../media/img/coder.png" alt="coderhouse logo"></a>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/n8u-tDr565Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </section>
     </main>
     <footer>
-        <div class="social">
-            <h3>My Social Media</h3>
-            <a href="#">
-                <i class="fa-brands fa-linkedin fa-xl"></i>
-            </a>
-            <a href="#">
-                <i class="fa-brands fa-github fa-xl"></i>
-            </a>
-            <a href="#">
-                <i class="fa-brands fa-facebook-square fa-xl"></i>
-            </a>
-            <a href="#">
-                <i class="fa-brands fa-twitch fa-xl"></i>
-            </a>         
+        <div class="card">
+            <div class="social">
+                <h3 class="social_media">My Social Media</h3>
+                <div class="icons_list">
+                    <a href="#">
+                        <i class="fa-brands fa-linkedin fa-xl"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-github fa-xl"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-facebook-square fa-xl"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-twitch fa-xl"></i>
+                    </a>   
+                </div>      
+            </div>
+            <a href="#home" class="up" id="up"><i class="fa-solid fa-arrow-up fa-xl"></i></a>
         </div>
-        <a href="#fg">Go up</a>
-        <h4>@Francisco Gutierrez 2022</h3>
+        <h4 class="footer_final">@Francisco Gutierrez 2022</h3>
     </footer>
+    <script src="./main.js"></script>
 </body>
 </html>
