--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,74 +4,96 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <link rel="icon" href="../media/img/logo.png">
     <script src="https://kit.fontawesome.com/266ba5adca.js" crossorigin="anonymous"></script>
     <title>Projects</title>
 </head>
 <body>
-    <header class="contact">
-        <img src="../media/img/logo.png" id="fg" alt="logo FG" width="10%">
-        <div class="nav bar">
-            <ul styles list-style-image= url("")>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="./aboutme.html">About me</a></li>                
-                <li><a href="./skills.html">Skills</a></li>
-                <li><a href="./contact.html">Contact</a></li>
-            </ul>
-        </div>
+    <header class="header" id="header">
+        <nav class="nav_container">
+            <a href="../index.html" class="nav_logo">
+                <i class="fa-solid fa-code"></i>
+                Fran
+            </a>    
+
+            <div class="nav_menu" id="nav-menu"> 
+                <a href="../index.html" class="nav_link">Home</a>
+                <a href="./aboutme.html" class="nav_link">About me</a>
+                <a href="./skills.html" class="nav_link">Skills</a>
+                <a href="./contact.html" class="nav_link">Contact</a>
+            
+
+                <div class="nav_close" id="nav-close">
+                    <i class="fa-solid fa-xmark"></i>
+                </div>
+            </div>
+
+            <div class="nav_toggle" id="nav-toggle">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+        </nav>
     </header>
     <main>
-        <h2>My Portfolio</h2>
-        <section>
-            <h2>AuHelp</h2>
-            <img src="../media/img/auhelp.jpg" alt="chess project" width="14%">
-            <ul>
-                <li>Lorem ipsum dolor sit amet.</li>
-                <li>Lorem ipsum dolor sit.</li>
-                <li>Lorem ipsum dolor sit amet consectetur.</li>
-            </ul>
-            <button>More</button>
+        <section class="projects_section">
+            <h2 class="titlepro">My Portfolio</h2>
+            <div class="projects grid">
+                <div class="project_card">
+                <h2>AuHelp</h2>
+                <img src="../media/img/auhelp.jpg" alt="chess project" width="14%">
+                <ul>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li>Lorem ipsum dolor sit.</li>
+                    <li>Lorem ipsum dolor sit amet consectetur.</li>
+                </ul>
+                <button class="btns">More</button>
+            </div>
+            <div class="project_card">
+                <h2>Omnilife</h2>
+                <img src="../media/img/omnilife.jpg" alt="chess project" width="14%">
+                <ul>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li>Lorem ipsum dolor sit.</li>
+                    <li>Lorem ipsum dolor sit amet consectetur.</li>
+                </ul>
+                <button class="btns">More</button>
+            </div>
+            <div class="project_card">
+                <h2>Chess</h2>
+                <img src="../media/img/chess.png" alt="chess project" width="14%">
+                <ul>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li>Lorem ipsum dolor sit.</li>
+                    <li>Lorem ipsum dolor sit amet consectetur.</li>
+                </ul>
+                <button class="btns">More</button>
+            </div>
+            </div>
         </section>
-        <section>
-            <h2>Omnilife</h2>
-            <img src="../media/img/omnilife.jpg" alt="chess project" width="14%">
-            <ul>
-                <li>Lorem ipsum dolor sit amet.</li>
-                <li>Lorem ipsum dolor sit.</li>
-                <li>Lorem ipsum dolor sit amet consectetur.</li>
-            </ul>
-            <button>More</button>
-        </section>
-        <section>
-            <h2>Chess</h2>
-            <img src="../media/img/chess.png" alt="chess project" width="14%">
-            <ul>
-                <li>Lorem ipsum dolor sit amet.</li>
-                <li>Lorem ipsum dolor sit.</li>
-                <li>Lorem ipsum dolor sit amet consectetur.</li>
-            </ul>
-            <button>More</button>
-        </section>
-        
     </main>
     <footer>
-        <div class="social">
-            <h3>My Social Media</h3>
-            <a href="#">
-                <i class="fa-brands fa-linkedin fa-xl"></i>
-            </a>
-            <a href="#">
-                <i class="fa-brands fa-github fa-xl"></i>
-            </a>
-            <a href="#">
-                <i class="fa-brands fa-facebook-square fa-xl"></i>
-            </a>
-            <a href="#">
-                <i class="fa-brands fa-twitch fa-xl"></i>
-            </a>         
+        <div class="card">
+            <div class="social">
+                <h3 class="social_media">My Social Media</h3>
+                <div class="icons_list">
+                    <a href="#">
+                        <i class="fa-brands fa-linkedin fa-xl"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-github fa-xl"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-facebook-square fa-xl"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-twitch fa-xl"></i>
+                    </a>   
+                </div>      
+            </div>
+            <a href="#home" class="up" id="up"><i class="fa-solid fa-arrow-up fa-xl"></i></a>
         </div>
-        <a href="#fg">Go up</a>
-        <h4>@Francisco Gutierrez 2022</h3>
+        <h4 class="footer_final">@Francisco Gutierrez 2022</h3>
     </footer>
+    <script src="./main.js"></script>
 </body>
 </html>
