update projets card and their styles

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -39,34 +39,46 @@
             <h2 class="titlepro">My Portfolio</h2>
             <div class="projects grid">
                 <div class="project_card">
-                <h2>AuHelp</h2>
-                <img src="../media/img/auhelp.jpg" alt="chess project" width="14%">
-                <ul>
-                    <li>Lorem ipsum dolor sit amet.</li>
-                    <li>Lorem ipsum dolor sit.</li>
-                    <li>Lorem ipsum dolor sit amet consectetur.</li>
-                </ul>
-                <button class="btns">More</button>
+                <figure>
+                    <img src="../media/img/auhelp.jpg" alt="auhelp project" width="14%">
+                    <div class="capa">
+                        <h2>AuHelp</h2>
+                        <ul>
+                            <li>Lorem ipsum dolor sit amet.</li>
+                            <li>Lorem ipsum dolor sit.</li>
+                            <li>Lorem ipsum dolor sit amet consectetur.</li>
+                        </ul>
+                        <button class="btns">More</button>
+                    </div>
+                </figure>
             </div>
             <div class="project_card">
-                <h2>Omnilife</h2>
-                <img src="../media/img/omnilife.jpg" alt="chess project" width="14%">
-                <ul>
-                    <li>Lorem ipsum dolor sit amet.</li>
-                    <li>Lorem ipsum dolor sit.</li>
-                    <li>Lorem ipsum dolor sit amet consectetur.</li>
-                </ul>
-                <button class="btns">More</button>
+                <figure>
+                    <img src="../media/img/omnilife.jpg" alt="omnilife project" width="14%">
+                    <div class="capa">
+                        <h2>AuHelp</h2>
+                        <ul>
+                            <li>Lorem ipsum dolor sit amet.</li>
+                            <li>Lorem ipsum dolor sit.</li>
+                            <li>Lorem ipsum dolor sit amet consectetur.</li>
+                        </ul>
+                        <button class="btns">More</button>
+                    </div>
+                </figure>
             </div>
             <div class="project_card">
-                <h2>Chess</h2>
-                <img src="../media/img/chess.png" alt="chess project" width="14%">
-                <ul>
-                    <li>Lorem ipsum dolor sit amet.</li>
-                    <li>Lorem ipsum dolor sit.</li>
-                    <li>Lorem ipsum dolor sit amet consectetur.</li>
-                </ul>
-                <button class="btns">More</button>
+                <figure>
+                    <img src="../media/img/chess.png" alt="chess project" width="14%">
+                    <div class="capa">
+                        <h2>AuHelp</h2>
+                        <ul>
+                            <li>Lorem ipsum dolor sit amet.</li>
+                            <li>Lorem ipsum dolor sit.</li>
+                            <li>Lorem ipsum dolor sit amet consectetur.</li>
+                        </ul>
+                        <button class="btns">More</button>
+                    </div>
+                </figure>
             </div>
             </div>
         </section>
