--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -86,6 +86,6 @@
         </div>
         <h4 class="footer_final">@Francisco Gutierrez 2022</h3>
     </footer>
-    <script src="./main.js"></script>
+    <script src="../main.js"></script>
 </body>
 </html>
