--- a/pages/projects.html
+++ b/pages/projects.html
@@ -106,6 +106,6 @@
         </div>
         <h4 class="footer_final">@Francisco Gutierrez 2022</h3>
     </footer>
-    <script src="./main.js"></script>
+    <script src="../main.js"></script>
 </body>
 </html>
