--- a/pages/skills.html
+++ b/pages/skills.html
@@ -90,6 +90,6 @@
         </div>
         <h4 class="footer_final">@Francisco Gutierrez 2022</h3>
     </footer>
-    <script src="./main.js"></script>
+    <script src="../main.js"></script>
 </body>
 </html>
