add responsive design and update #up in pages

--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -36,7 +36,7 @@
         </nav>
     </header>
     <main class="main_about">
-        <section class="about">
+        <section class="about" id="home">
             <h2>About me</h2>
             <div class="aboutme">
                 <div class="me">
