--- a/pages/contact.html
+++ b/pages/contact.html
@@ -36,7 +36,7 @@
         </nav>
     </header>
     <main class="main_form">
-        <section class="form">
+        <section class="form" id="home">
             <h2>Contact Me</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             <fieldset>
