--- a/pages/projects.html
+++ b/pages/projects.html
@@ -35,7 +35,7 @@
         </nav>
     </header>
     <main>
-        <section class="projects_section">
+        <section class="projects_section" id="home">
             <h2 class="titlepro">My Portfolio</h2>
             <div class="projects grid">
                 <div class="project_card">
