--- a/pages/skills.html
+++ b/pages/skills.html
@@ -34,7 +34,7 @@
             </div>
         </nav>
     </header>
-    <main class="main_skill grid">
+    <main class="main_skill grid" id="home">
         <div class="skills-links">
             <h2 class="title_skill">Skills</h2>
             <div class="icons_skills">
