update skills_icons style and their respondive design

--- a/pages/skills.html
+++ b/pages/skills.html
@@ -39,25 +39,25 @@
             <h2 class="title_skill">Skills</h2>
             <div class="icons_skills">
                 <a href="#" class="link_skill">
-                    <i class="fa-brands fa-html5 fa-2xl"></i>
+                    <i class="fa-brands fa-html5"></i>
                 </a>
                 <a href="#" class="link_skill">
-                    <i class="fa-brands fa-git-alt fa-2xl"></i>
+                    <i class="fa-brands fa-git-alt"></i>
                 </a>
                 <a href="#" class="link_skill">
-                    <i class="fa-brands fa-css3 fa-2xl"></i>
+                    <i class="fa-brands fa-css3"></i>
                 </a>
                 <a href="#" class="link_skill">
-                    <i class="fa-brands fa-linux fa-2xl"></i>
+                    <i class="fa-brands fa-linux"></i>
+                </a>
+                <a href="#" class="link_skill jas">
+                    <i class="fa-brands fa-js"></i>
                 </a>
                 <a href="#" class="link_skill">
-                    <i class="fa-brands fa-js fa-2xl"></i>
-                </a>
-                <a href="#" class="link_skill">
-                    <i class="fa-brands fa-java fa-2xl"></i>
+                    <i class="fa-brands fa-java"></i>
                 </a>
                 <a href="" class="link_skill">
-                    <i class="fa-brands fa-react fa-2xl"></i>
+                    <i class="fa-brands fa-react"></i>
                 </a>
             </div>
         </div>
