--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <link rel="stylesheet" href="../style.css">
     <link rel="icon" href="../media/img/logo.png">
     <script src="https://kit.fontawesome.com/266ba5adca.js" crossorigin="anonymous"></script>
@@ -38,7 +42,7 @@
     <main class="main_about">
         <section class="about" id="home">
             <h2>About me</h2>
-            <div class="aboutme">
+            <div class="aboutme animate__animated animate__backInUp">
                 <div class="me">
                     <h2>Code</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
