working footer in all pages

--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -16,7 +16,7 @@
 <body>
     <!--=========== HEADER ===========-->
     <header class="header" id="header">
-        <nav class="nav_container">
+        <nav class="nav_conteiner">
             <a href="../index.html" class="nav_logo">
                 <i class="fa-solid fa-code"></i>
                 Fran
