--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,7 +12,7 @@
 <body>
     <!--=========== HEADER ===========-->
     <header class="header" id="header">
-        <nav class="nav_container">
+        <nav class="nav_conteiner">
             <a href="../index.html" class="nav_logo">
                 <i class="fa-solid fa-code"></i>
                 Fran
@@ -54,7 +54,7 @@
                         <label for="message">Message</label><br>
                         <textarea name="message" id="" cols="40" rows="10" required></textarea>
                     </div>
-                    <div class="btn_container">
+                    <div class="btn_conteiner">
                         <input type="reset" value="Clean" class="btns">
                         <input type="submit" value="Send me message!" class="btns">
                     </div>
@@ -62,7 +62,7 @@
             </fieldset>               
         </section>
         <section>
-            <div class="help_container">
+            <div class="help_conteiner">
                 <h3>Made with <i class="fa-solid fa-heart"></i> with the help of CoderHouse</h3>
                 <a href="http://www.coderhouse.com" target="_blank"><img src="../media/img/coder.png" alt="coderhouse logo"></a>
                 <iframe width="360" height="205" src="https://www.youtube.com/embed/n8u-tDr565Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
