--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./media/img/logo.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/266ba5adca.js" crossorigin="anonymous"></script>
     <title>Francisco Gutierrez</title>
 </head>
 <body>
     <!--=========== HEADER ===========-->
     <header class="header" id="header">
-        <nav class="nav_container">
+        <nav class="nav_conteiner">
             <a href="./index.html" class="nav_logo">
                 <i class="fa-solid fa-code"></i>
                 Fran
@@ -43,7 +43,7 @@
                 <div class="shape shape_big"></div>
                 <div class="shape shape_small"></div>
 
-                <div class="home_container conteiner grid">
+                <div class="home_conteiner continer grid">
                     <div class="home_data">
                         <h1 class="home_title"><span>Hello World!</span></h1>
 
@@ -61,28 +61,66 @@
     </main>
     <!--=========== FOOTER ===========-->
     <footer>
-        <div class="card">
-            <div class="social">
-                <h3 class="social_media">My Social Media</h3>
-                <div class="icons_list">
-                    <a href="#">
-                        <i class="fa-brands fa-linkedin fa-xl"></i>
+        <div class="footer-top">
+            <div class="container">
+              <div class="row justify-content-between gy-5">
+                <div class="col-md-4">
+                    <a href="./index.html" class="nav_logo">
+                        <i class="fa-solid fa-code"></i>
+                        Fran
                     </a>
-                    <a href="#">
-                        <i class="fa-brands fa-github fa-xl"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fa-brands fa-facebook-square fa-xl"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fa-brands fa-twitch fa-xl"></i>
-                    </a>   
-                </div>      
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus corrupti facere illum?</p>
+                  <div class="social-icons">
+                    <a href="#"><i class="fa-brands fa-facebook-square"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin fa-xl"></i></a>
+                    <a href="#"><i class="fa-brands fa-github fa-xl"></i></a>
+                  </div>
+                </div>
+                <div class="col-md-2">
+                  <h4 class="title-sm">Navigation</h4>
+                  <div class="footer-links">
+                    <a href="#Home">Home</a>
+                    <a href="#">About Us</a>
+                    <a href="#">Products</a>
+                    <a href="#">Contact</a>
+                  </div>
+                </div>
+                <div class="col-md-2">
+                  <h4 class="title-sm">More</h4>
+                  <div class="footer-links">
+                    <a href="#">FAQ's</a>
+                    <a href="#">Liscenses</a>
+                    <a href="#">Privacy and Policy</a>
+                  </div>
+                </div>
+                <div class="col-md-3">
+                  <h4 class="title-sm">Contact</h4>
+                  <div class="footer-links">
+                    <p class="mb">Lorem ipsum dolor sit amet, consectetur.</p>
+                    <p class="mb">Lorem ipsum dolor sit amet.</p>
+                    <p class="mb">Lorem ipsum.</p>
+                  </div>
+                </div>
+              </div>
             </div>
-            <a href="#home" class="up" id="up"><i class="fa-solid fa-arrow-up fa-xl"></i></a>
-        </div>
-        <h4 class="footer_final">@Francisco Gutierrez 2022</h3>
-    </footer>
+          </div>
+          <div class="footer-bottom">
+            <div class="container">
+              <div class="row justify-content-between gy-3">
+                <div class="col-md-6">
+                  <p class="mb-0">@Copyright2022</p>
+                </div>
+                <div class="col-auto">
+                  <p class="mb-0">Design by Francisco Gutiereez</p>
+                </div>
+              </div>
+            </div>
+          </div>
+      </footer>
     <script src="./main.js"></script>
+    <script src="https://kit.fontawesome.com/266ba5adca.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
