--- a/pages/skills.html
+++ b/pages/skills.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="header" id="header">
-        <nav class="nav_container">
+        <nav class="nav_conteiner">
             <a href="../index.html" class="nav_logo">
                 <i class="fa-solid fa-code"></i>
                 Fran
