--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
     <!--=========== MAIN ===========-->
     <main>
         <!--=========== Home ===========--> 
-        <section>
+        <section class="home_sec">
             <div class="home section" id="home">
                 <div class="shape shape_big"></div>
                 <div class="shape shape_small"></div>
 
-                <div class="home_conteiner continer grid">
+                <div class="home_conteiner grid">
                     <div class="home_data">
                         <h1 class="home_title"><span>Hello World!</span></h1>
 
@@ -74,22 +74,23 @@
                     <a href="#"><i class="fa-brands fa-facebook-square"></i></a>
                     <a href="#"><i class="fa-brands fa-instagram"></i></a>
                     <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin fa-xl"></i></a>
-                    <a href="#"><i class="fa-brands fa-github fa-xl"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#"><i class="fa-brands fa-github"></i></a>
                   </div>
                 </div>
                 <div class="col-md-2">
                   <h4 class="title-sm">Navigation</h4>
-                  <div class="footer-links">
-                    <a href="#Home">Home</a>
-                    <a href="#">About Us</a>
-                    <a href="#">Products</a>
-                    <a href="#">Contact</a>
+                  <div class="footer-links d-flex flex-column">
+                    <a href="./index.html">Home</a>
+                    <a href="./pages/projects.html">Portfolio</a>
+                    <a href="./pages/aboutme.html">About Me</a>
+                    <a href="./pages/skills.html">Skills</a>
+                    <a href="./pages/contact.html">Contact me</a>
                   </div>
                 </div>
                 <div class="col-md-2">
                   <h4 class="title-sm">More</h4>
-                  <div class="footer-links">
+                  <div class="footer-links d-flex flex-column">
                     <a href="#">FAQ's</a>
                     <a href="#">Liscenses</a>
                     <a href="#">Privacy and Policy</a>
@@ -119,8 +120,10 @@
             </div>
           </div>
       </footer>
+    <!-- SCRIPTS -->
     <script src="./main.js"></script>
     <script src="https://kit.fontawesome.com/266ba5adca.js" crossorigin="anonymous"></script>
+    <!-- BOOTSTRAP SCRIPTS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
