--- a/pages/skills.html
+++ b/pages/skills.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../style.css">
     <link rel="icon" href="../media/img/logo.png">
@@ -11,7 +12,7 @@
     <title>Skills</title>
 </head>
 <body>
-    <header class="header" id="header">
+    <header class="header" id="header" data-aos="fade-down" data-aos-duration="1000">
         <nav class="nav_conteiner">
             <a href="../index.html" class="nav_logo">
                 <i class="fa-solid fa-code"></i>
@@ -70,7 +71,7 @@
     </main>
     <!--=========== FOOTER ===========-->
     <footer>
-        <div class="footer-top">
+        <div class="footer-top" data-aos="fade-right">
             <div class="container">
               <div class="row justify-content-between gy-5">
                 <div class="col-md-4">
@@ -128,11 +129,16 @@
               </div>
             </div>
           </div>
-      </footer>
+    </footer>
     <!-- SCRIPTS -->
     <script src="./main.js"></script>
     <script src="https://kit.fontawesome.com/266ba5adca.js" crossorigin="anonymous"></script>
     <!-- BOOTSTRAP SCRIPTS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <!-- AOS SCRIPT -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
