--- a/pages/projects.html
+++ b/pages/projects.html
@@ -12,7 +12,7 @@
     <title>Projects</title>
 </head>
 <body>
-    <header class="header" id="header" data-aos="fade-down" data-aos-duration="1000">
+    <header class="header" id="header">
         <nav class="nav_conteiner">
             <a href="../index.html" class="nav_logo">
                 <i class="fa-solid fa-code"></i>
