--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!--=========== HEADER ===========-->
     <header class="header" id="header">
-        <nav class="nav_conteiner" data-aos="fade-down" data-aos-duration="1000">
+        <nav class="nav_conteiner">
             <a href="./index.html" class="nav_logo">
                 <i class="fa-solid fa-code"></i>
                 Fran
