--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <!--=========== HEADER ===========-->
-    <header class="header" id="header" data-aos="fade-down" data-aos-duration="1000">
+    <header class="header" id="header">
         <nav class="nav_conteiner">
             <a href="../index.html" class="nav_logo">
                 <i class="fa-solid fa-code"></i>
