--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -128,7 +128,7 @@
           </div>
     </footer>
     <!-- SCRIPTS -->
-    <script src="./main.js"></script>
+    <script src="../main.js"></script>
     <script src="https://kit.fontawesome.com/266ba5adca.js" crossorigin="anonymous"></script>
     <!-- BOOTSTRAP SCRIPTS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
