fixed footer navigation links on pages

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -23,9 +23,8 @@
             <div class="nav_menu" id="nav-menu"> 
                 <a href="../index.html" class="nav_link">Home</a>
                 <a href="./projects.html" class="nav_link">My Portfolio</a>
+                <a href="./aboutme.html" class="nav_link">About me</a>
                 <a href="./skills.html" class="nav_link">Skills</a>
-                <a href="./contact.html" class="nav_link">Contact</a>
-            
 
                 <div class="nav_close" id="nav-close">
                     <i class="fa-solid fa-xmark"></i>
@@ -93,11 +92,11 @@
                 <div class="col-md-2">
                   <h4 class="title-sm">Navigation</h4>
                   <div class="footer-links d-flex flex-column">
-                    <a href="./index.html">Home</a>
-                    <a href="./pages/projects.html">Portfolio</a>
-                    <a href="./pages/aboutme.html">About Me</a>
-                    <a href="./pages/skills.html">Skills</a>
-                    <a href="./pages/contact.html">Contact me</a>
+                    <a href="../index.html">Home</a>
+                    <a href="./projects.html">Portfolio</a>
+                    <a href="./aboutme.html">About Me</a>
+                    <a href="./skills.html">Skills</a>
+                    <a href="./contact.html">Contact me</a>
                   </div>
                 </div>
                 <div class="col-md-2">
