--- a/pages/skills.html
+++ b/pages/skills.html
@@ -91,11 +91,11 @@
                 <div class="col-md-2">
                   <h4 class="title-sm">Navigation</h4>
                   <div class="footer-links d-flex flex-column">
-                    <a href="./index.html">Home</a>
-                    <a href="./pages/projects.html">Portfolio</a>
-                    <a href="./pages/aboutme.html">About Me</a>
-                    <a href="./pages/skills.html">Skills</a>
-                    <a href="./pages/contact.html">Contact me</a>
+                    <a href="../index.html">Home</a>
+                    <a href="./projects.html">Portfolio</a>
+                    <a href="./aboutme.html">About Me</a>
+                    <a href="./skills.html">Skills</a>
+                    <a href="./contact.html">Contact me</a>
                   </div>
                 </div>
                 <div class="col-md-2">
