add scss variables and aboutme,changed background

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!--=========== MAIN ===========-->
     <main>
         <!--=========== Home ===========--> 
-        <section class="home_sec">
+        <section>
             <div class="home section" id="home">
                 <div class="shape shape_big"></div>
                 <div class="shape shape_small"></div>
