meta description & keywords

--- a/pages/skills.html
+++ b/pages/skills.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" href="../media/img/logo.png">
     <script src="https://kit.fontawesome.com/266ba5adca.js" crossorigin="anonymous"></script>
+    <meta name="description" content="Este es el sitio web Fran donde podras conocer todo acerca de mi sobre Desarrollador Web, desde mis proyectos, como habilidades hasta como contactarme">
+    <meta name="keywords"  content="WEB, DEVELOPER, SOFTWARE, HABILIDADES, PROYECTOS, HTML, CSS, JAVASCRIPT, BOOTSTRAP, FRANCISCO">
     <title>Skills</title>
 </head>
 <body>
