add content on my home page and container bootstrap on all nav pages

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!--=========== HEADER ===========-->
     <header class="header" id="header">
-        <nav class="nav_conteiner">
+        <nav class="nav_conteiner container">
             <a href="./index.html" class="nav_logo">
                 <i class="fa-solid fa-code"></i>
                 Fran
@@ -46,12 +46,12 @@
                 <div class="shape shape_big"></div>
                 <div class="shape shape_small"></div>
 
-                <div class="home_conteiner grid">
+                <div class="home_conteiner grid container">
                     <div class="home_data">
                         <h1 class="home_title"><span>Hello World!</span></h1>
 
                         <h2 class="home_subtitle">I'm Francisco Gutierrez</h2>
-
+                        <p>Hi! Welcome to my web portfolio! I'm web Developer and Software Enginner Student at Unju.</p>
                         <h3 class="home_web">
                             <i class="fa-solid fa-mug-saucer"></i>
                             Web Developer 
@@ -72,7 +72,7 @@
                         <i class="fa-solid fa-code"></i>
                         Fran
                     </a>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus corrupti facere illum?</p>
+                  <p>Hi! Welcome to my web portfolio! My name is Francisco Gutierrez, I'm web Developer and Software Enginner Student at Unju.</p>
                   <div class="social-icons">
                     <a href="#"><i class="fa-brands fa-facebook-square"></i></a>
                     <a href="#"><i class="fa-brands fa-instagram"></i></a>
@@ -102,9 +102,9 @@
                 <div class="col-md-3">
                   <h4 class="title-sm">Contact</h4>
                   <div class="footer-links">
-                    <p class="mb">Lorem ipsum dolor sit amet, consectetur.</p>
-                    <p class="mb">Lorem ipsum dolor sit amet.</p>
-                    <p class="mb">Lorem ipsum.</p>
+                    <p class="mb">Jujuy, Argentina</p>
+                    <p class="mb">San Salvador de Jujuy</p>
+                    <p class="mb">+54 1234 567895</p>
                   </div>
                 </div>
               </div>
