--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,7 +16,7 @@
 <body>
     <!--=========== HEADER ===========-->
     <header class="header" id="header">
-        <nav class="nav_conteiner">
+        <nav class="nav_conteiner container">
             <a href="../index.html" class="nav_logo">
                 <i class="fa-solid fa-code"></i>
                 Fran
@@ -82,7 +82,7 @@
                         <i class="fa-solid fa-code"></i>
                         Fran
                     </a>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus corrupti facere illum?</p>
+                    <p>Hi! Welcome to my web portfolio! My name is Francisco Gutierrez, I'm web Developer and Software Enginner Student at Unju.</p>
                   <div class="social-icons">
                     <a href="#"><i class="fa-brands fa-facebook-square"></i></a>
                     <a href="#"><i class="fa-brands fa-instagram"></i></a>
@@ -112,9 +112,9 @@
                 <div class="col-md-3">
                   <h4 class="title-sm">Contact</h4>
                   <div class="footer-links">
-                    <p class="mb">Lorem ipsum dolor sit amet, consectetur.</p>
-                    <p class="mb">Lorem ipsum dolor sit amet.</p>
-                    <p class="mb">Lorem ipsum.</p>
+                    <p class="mb">Jujuy, Argentina</p>
+                    <p class="mb">San Salvador de Jujuy</p>
+                    <p class="mb">+54 1234 567895</p>
                   </div>
                 </div>
               </div>
