--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="shape shape_big"></div>
                 <div class="shape shape_small"></div>
 
-                <div class="home_conteiner grid container">
+                <div class="home_conteiner container">
                     <div class="home_data">
                         <h1 class="home_title"><span>Hello World!</span></h1>
 
