--- a/pages/projects.html
+++ b/pages/projects.html
@@ -41,7 +41,7 @@
     <main>
         <section class="projects_section" id="home">
             <h2 class="titlepro">My Portfolio</h2>
-            <div class="projects grid">
+            <div class="projects">
                 <div class="project_card">
                 <figure>
                     <img src="../media/img/auhelp.jpg" alt="auhelp project" width="14%">
