--- a/pages/skills.html
+++ b/pages/skills.html
@@ -38,7 +38,7 @@
             </div>
         </nav>
     </header>
-    <main class="main_skill grid container" id="home">
+    <main class="main_skill container" id="home">
         <div class="skills-links">
             <h2 class="title_skill">Skills</h2>
             <div class="icons_skills">
